Add tests for create and finish credential methods